--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-PartitionedMPSs = "17ce1de9-5131-45e3-8a48-9723b6e2dc23"
+ComputationalGraphs = "600ee577-13e0-40b1-92e9-efa067e629b2"
