--- a/Project.toml
+++ b/Project.toml
@@ -6,10 +6,14 @@ version = "0.1.0"
 [deps]
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 CoverageTools = "c36e975a-824b-4404-a568-ef97ca766997"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+NamedGraphs = "678767b0-92e7-4007-89e4-4527a8725b19"
 
 [compat]
 Coverage = "1"
 CoverageTools = "1"
+Graphs = "1.12.0"
+NamedGraphs = "0.6.3"
 julia = "1.9"
 
 [extras]
